# DECO3500

./: README.md  docker-compose.deploy.yml  docker-compose.gpio.yml  docker-compose.yml  package-lock.json  run_pi_podman.sh
.github/workflows/: docker-publish.yml
api/: Dockerfile  Dockerfile.gpio  inventory.db  main.py  pi.py  pyproject.toml
api/src/: password.py
client/: .gitignore  main.py  pyproject.toml
images/Friday 12/Adv Eng/: IMG_6366.HEIC  IMG_6367.HEIC  IMG_6368.HEIC
images/Friday 12/Bioscience/: IMG_6364.HEIC
images/Friday 12/Central/: IMG_6360.HEIC  IMG_6361.HEIC  IMG_6362.HEIC
images/Thursday 11/bioscience/: IMG_8432.HEIC  IMG_8433.HEIC  IMG_8434.HEIC  IMG_8435.HEIC  IMG_8437.HEIC
images/Thursday 11/central/: IMG_8438.HEIC  IMG_8439.HEIC
images/Thursday 11/engy/: IMG_8441.HEIC  IMG_8442.HEIC  IMG_8443.HEIC  IMG_8443.HEIC:Zone.Identifier
images/Tuesday 9/Advanced Engineering (Postgrad)/: IMG_8841.HEIC  IMG_8842.HEIC  IMG_8843.HEIC  IMG_8844.HEIC  IMG_8845.HEIC  IMG_8846.HEIC  IMG_8847.HEIC
images/Tuesday 9/Bioscience Library/: IMG_8851.HEIC  IMG_8852.HEIC  IMG_8853.HEIC  IMG_8854.HEIC  IMG_8855.HEIC  IMG_8856.HEIC  IMG_8857.HEIC  IMG_8858.HEIC
images/Wednesday 10/: IMG_8902.HEIC  IMG_8903.HEIC  IMG_8904.HEIC  IMG_8905.HEIC  IMG_8906.HEIC  IMG_8907.HEIC  IMG_8908.HEIC  IMG_8909.HEIC  IMG_8910.HEIC  IMG_8911.HEIC  IMG_8912.HEIC  IMG_8913.HEIC  IMG_8914.HEIC  IMG_8915.HEIC  IMG_8916.HEIC  IMG_8918.HEIC
ui/: Dockerfile  next.config.ts  package-lock.json  package.json
ui/app/: page.module.css  page.tsx
ui/app/api/: _backend.ts
(+16 files in other folders)
